[gd_scene load_steps=3 format=3 uid="uid://cfimivt35n1v6"]

[ext_resource type="Script" path="res://src/Menus/settings.gd" id="1_m36jc"]
[ext_resource type="Script" path="res://src/Nodes/ValueSlider.gd" id="2_7lbqn"]

[node name="Settings" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m36jc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound volume:"

[node name="SoundVolumeSlider" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_type_variation = &"ValueSlider"
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("2_7lbqn")
show_arrows = false

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Language:"

[node name="LanguageOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Ελληνικά"
popup/item_1/id = 1

[node name="ReturnToMenu" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Return to menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/LanguageOptionButton" to="." method="_on_language_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
